Enhance Index.html with jewelry details and inventory
Added detailed content about jewelry, including descriptions, categories, and an inventory table.

--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,181 @@
-<h1>This website is about jewelry</h1>
-<p>Jewelry are all about luxury and taste</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Jewelry Collection</title>
+</head>
+<body>
+
+    <!-- Line 1: Bold -->
+    <p><b>Elegant jewelry reflects timeless beauty and craftsmanship.</b></p>
+
+    <!-- Line 2: Italics -->
+    <p><i>Jewelry has been worn for centuries as a symbol of status and love.</i></p>
+
+    <!-- Line 3: Underlined -->
+    <p><u>Gold, silver, and diamonds remain the most popular materials.</u></p>
+
+    <!-- Line 4: Superscript (date + others) -->
+    <p>Our flagship store was established in 2025<sup>TM</sup>.</p>
+
+    <!-- Line 5: Subscript (>4) -->
+    <p>The purity of gold is often written as 24<sub>karat</sub>.</p>
+
+    <!-- Line 6: Strike -->
+    <p><strike>Cheap jewelry lacks durability and elegance.</strike></p>
+
+    <!-- Line 7: Highlight -->
+    <p><mark>Handcrafted jewelry pieces are unique and valuable.</mark></p>
+
+    <!-- Line 8: Quotation -->
+    <p>"Jewelry is the most transformative thing you can wear."</p>
+
+    <!-- Line 9: Indent Quotation -->
+    <blockquote>
+        Jewelry has the power to capture memories, emotions, and personal identity.
+    </blockquote>
+
+    <!-- Line 10: Footer -->
+    <footer>
+        <p>© 2026 Anderson Jewelry House</p>
+    </footer>
+
+    <!-- Line 11: Line breaks (4 lines) -->
+    <p>
+        Rings represent commitment.<br>
+        Necklaces enhance elegance.<br>
+        Bracelets symbolize style.<br>
+        Earrings complete an outfit.
+    </p>
+
+    <!-- Line 12: 3 lines with HR -->
+    <hr>
+    <p>Diamond Collection</p>
+    <hr>
+    <p>Gold Collection</p>
+    <hr>
+    <p>Silver Collection</p>
+
+    <!-- Line 13: 3 lines pre -->
+    <pre>
+Gold Ring - $500
+Diamond Necklace - $1200
+Silver Bracelet - $300
+    </pre>
+
+    <!-- Line 14: Lists -->
+    <h3>Unordered Jewelry List</h3>
+    <ul>
+        <li>Rings</li>
+        <li>Necklaces</li>
+        <li>Bracelets</li>
+        <li>Earrings</li>
+        <li>Anklets</li>
+    </ul>
+
+    <h3>Ordered Jewelry List</h3>
+    <ol>
+        <li>Gold Ring</li>
+        <li>Diamond Necklace</li>
+        <li>Silver Bracelet</li>
+        <li>Pearl Earrings</li>
+        <li>Platinum Chain</li>
+    </ol>
+
+    <!-- Line 15: Nested list with 6 items -->
+    <h3>Jewelry Categories</h3>
+    <ul>
+        <li>Rings
+            <ul>
+                <li>Engagement Rings</li>
+                <li>Wedding Bands</li>
+            </ul>
+        </li>
+        <li>Necklaces
+            <ul>
+                <li>Gold Chains</li>
+                <li>Diamond Pendants</li>
+            </ul>
+        </li>
+    </ul>
+
+    <!-- Line 17: Table (10 columns, 5 rows) -->
+    <h3>Jewelry Inventory</h3>
+    <table border="1">
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Type</th>
+            <th>Material</th>
+            <th>Weight</th>
+            <th>Price</th>
+            <th>Stock</th>
+            <th>Origin</th>
+            <th>Quality</th>
+            <th>Year</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Royal Ring</td>
+            <td>Ring</td>
+            <td>Gold</td>
+            <td>5g</td>
+            <td>$500</td>
+            <td>10</td>
+            <td>Italy</td>
+            <td>High</td>
+            <td>2026</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Diamond Glow</td>
+            <td>Necklace</td>
+            <td>Diamond</td>
+            <td>8g</td>
+            <td>$1200</td>
+            <td>5</td>
+            <td>France</td>
+            <td>Premium</td>
+            <td>2026</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Silver Touch</td>
+            <td>Bracelet</td>
+            <td>Silver</td>
+            <td>6g</td>
+            <td>$300</td>
+            <td>15</td>
+            <td>India</td>
+            <td>Medium</td>
+            <td>2025</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Pearl Drop</td>
+            <td>Earrings</td>
+            <td>Pearl</td>
+            <td>4g</td>
+            <td>$400</td>
+            <td>8</td>
+            <td>Japan</td>
+            <td>High</td>
+            <td>2025</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Platinum Lux</td>
+            <td>Chain</td>
+            <td>Platinum</td>
+            <td>7g</td>
+            <td>$1500</td>
+            <td>3</td>
+            <td>USA</td>
+            <td>Premium</td>
+            <td>2026</td>
+        </tr>
+    </table>
+
+</body>
+</html>
