Revise Index.html for Elegance Jewelers branding
Updated the title and structured content for Elegance Jewelers, enhancing the HTML structure with various tags for better presentation.

--- a/Index.html
+++ b/Index.html
@@ -1,181 +1,150 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Jewelry Collection</title>
+    <title>Elegance Jewelers</title>
 </head>
 <body>
 
-    <!-- Line 1: Bold -->
-    <p><b>Elegant jewelry reflects timeless beauty and craftsmanship.</b></p>
+<!-- 1. Headings(4) -->
+<h1>Elegance Jewelers</h1>
+<h2>Timeless Craftsmanship</h2>
+<h3>Featured Collections</h3>
+<h4>Contact Us</h4>
 
-    <!-- Line 2: Italics -->
-    <p><i>Jewelry has been worn for centuries as a symbol of status and love.</i></p>
+<p><strong>This exclusive jewelry showcase blends timeless elegance with modern design for everyday sophistication and everlasting memories.</strong></p>
 
-    <!-- Line 3: Underlined -->
-    <p><u>Gold, silver, and diamonds remain the most popular materials.</u></p>
+<!-- 3. Two underlined sentences -->
+<p><u>Discover the finest craftsmanship in every piece with detailed artistry and passion.</u></p>
+<p><u>Each creation reflects our commitment to quality and unforgettable luxury.</u></p>
 
-    <!-- Line 4: Superscript (date + others) -->
-    <p>Our flagship store was established in 2025<sup>TM</sup>.</p>
+<!-- 4. Superscript -->
+<p>Gold Purity Levels: 18<sup>th</sup> Century Inspired, 22<sup>nd</sup> Carat, 24<sup>rd</sup> Carat, Certified 99.9<sup>th</sup></p>
 
-    <!-- Line 5: Subscript (>4) -->
-    <p>The purity of gold is often written as 24<sub>karat</sub>.</p>
+<!-- 5. Subscript -->
+<p>Chemical identifiers: Au<sub>79</sub>, Ag<sub>47</sub>, Cu<sub>29</sub>, Pt<sub>78</sub></p>
 
-    <!-- Line 6: Strike -->
-    <p><strike>Cheap jewelry lacks durability and elegance.</strike></p>
+<!-- 6. Del tag -->
+<p><del>Discounts offered last season</del></p>
+<p><del>Outdated stock clearance info</del></p>
+<p><del>Previous contact email</del></p>
+<p><del>Old terms and conditions</del></p>
 
-    <!-- Line 7: Highlight -->
-    <p><mark>Handcrafted jewelry pieces are unique and valuable.</mark></p>
+<!-- 7. Mark tag -->
+<p><mark>New arrival: Exclusive Diamond Bracelet</mark></p>
+<p><mark>Limited edition engagement ring</mark></p>
+<p><mark>Free shipping for first-time buyers</mark></p>
+<p><mark>Complimentary gift wrapping</mark></p>
 
-    <!-- Line 8: Quotation -->
-    <p>"Jewelry is the most transformative thing you can wear."</p>
+<!-- 8. Speech marks (4 sentences) -->
+<p>"Every gemstone tells a story of passion and brilliance."</p>
+<p>"Our artisans pour heart and soul into every design."</p>
+<p>"Elegance is not just what you wear, it is who you are."</p>
+<p>"Only the highest quality materials earn the Elegance Jewelers name."</p>
 
-    <!-- Line 9: Indent Quotation -->
-    <blockquote>
-        Jewelry has the power to capture memories, emotions, and personal identity.
-    </blockquote>
+<!-- 9. Block quote (4 lines) -->
+<blockquote>
+    "Jewelry is more often worn for personal symbolism than mere decoration."<br>
+    "A ring can be an heirloom that tells a family's tale."<br>
+    "Pearls embody purity and strength in understated beauty."<br>
+    "Gold remains the timeless standard of luxury and resilience."
+</blockquote>
 
-    <!-- Line 10: Footer -->
-    <footer>
-        <p>© 2026 Anderson Jewelry House</p>
-    </footer>
+<hr>
 
-    <!-- Line 11: Line breaks (4 lines) -->
-    <p>
-        Rings represent commitment.<br>
-        Necklaces enhance elegance.<br>
-        Bracelets symbolize style.<br>
-        Earrings complete an outfit.
-    </p>
+<!-- 11. Line breaks (4 sentences each 10 words) -->
+<p>
+    Our store embraces elegance and creativity for discerning collectors.<br>
+    Every item offers unique beauty and handcrafted quality for customers.<br>
+    Explore gems that inspire confidence and unforgettable stories of love.<br>
+    Your satisfaction remains our unwavering commitment beyond all expectations.
+</p>
 
-    <!-- Line 12: 3 lines with HR -->
-    <hr>
-    <p>Diamond Collection</p>
-    <hr>
-    <p>Gold Collection</p>
-    <hr>
-    <p>Silver Collection</p>
+<hr>
 
-    <!-- Line 13: 3 lines pre -->
-    <pre>
-Gold Ring - $500
-Diamond Necklace - $1200
-Silver Bracelet - $300
-    </pre>
+<!-- 12. Demonstrate use of <hr> tag (3 sentences) -->
+<p>Explore our handcrafted collections curated with exquisite taste.</p>
+<hr>
+<p>Each design is crafted with precision and artistic passion.</p>
+<hr>
+<p>Experience luxury that transcends trends and classic beauty awaits.</p>
 
-    <!-- Line 14: Lists -->
-    <h3>Unordered Jewelry List</h3>
+<!-- 13. Demonstrate use of <pre> tag (3 sentences) -->
+<pre>
+Elegance Jewelers
+Precision in every design
+Crafted for moments that matter
+</pre>
+
+<!-- Unordered list (3 items) -->
+<ul>
+    <li>Diamond Rings</li>
+    <li>Gold Necklaces</li>
+    <li>Pearl Earrings</li>
+</ul>
+
+<!-- Ordered list (3 items) -->
+<ol>
+    <li>Choose your design</li>
+    <li>Select the perfect gem</li>
+    <li>Place your order</li>
+</ol>
+
+<!-- Nested list (6 items) -->
+<ul>
+    <li>Collections
+        <ul>
+            <li>Engagement Rings</li>
+            <li>Wedding Bands</li>
+        </ul>
+    </li>
+    <li>Services
+        <ul>
+            <li>Customization</li>
+            <li>Repairs</li>
+        </ul>
+    </li>
+</ul>
+
+<!-- 17 & 18 & 19 & 20. Table with border, caption, rowspan -->
+<table border="1">
+    <caption>Jewelry Pricing & Details</caption>
+    <tr>
+        <th>Item</th><th>Material</th><th>Carat</th><th>Price</th><th>Stock</th><th>Category</th><th>Discount</th><th>SKU</th>
+    </tr>
+    <tr>
+        <td rowspan="2">Eternal Solitaire Ring</td><td>White Gold</td><td>1.0</td><td>2,299</td><td>5</td><td>Rings</td><td>0</td><td>A1001</td>
+    </tr>
+    <tr>
+        <td>Diamond</td><td>1.0</td><td>2,299</td><td>5</td><td>Rings</td><td>0</td><td>A1001</td>
+    </tr>
+    <tr><td>Golden Grace Pendant</td><td>Yellow Gold</td><td>0</td><td>2,850</td><td>8</td><td>Pendants</td><td>5%</td><td>A1002</td></tr>
+    <tr><td>Baroque Pearl Studs</td><td>Pearl</td><td>0</td><td>2,500</td><td>10</td><td>Earrings</td><td>0</td><td>A1003</td></tr>
+    <tr><td>Emerald Bracelet</td><td>Gold</td><td>0</td><td>3,750</td><td>2</td><td>Bracelets</td><td>10%</td><td>A1004</td></tr>
+    <tr><td>Ruby Necklace</td><td>Rose Gold</td><td>0</td><td>4,200</td><td>4</td><td>Necklaces</td><td>0</td><td>A1005</td></tr>
+    <tr><td>Sapphire Earrings</td><td>White Gold</td><td>0</td><td>3,100</td><td>6</td><td>Earrings</td><td>5%</td><td>A1006</td></tr>
+    <tr><td>Platinum Band</td><td>Platinum</td><td>0</td><td>1,950</td><td>7</td><td>Bands</td><td>0</td><td>A1007</td></tr>
+    <tr><td>Classic Cufflinks</td><td>Gold</td><td>0</td><td>950</td><td>15</td><td>Accessories</td><td>0</td><td>A1008</td></tr>
+    <tr><td>Luxury Watch</td><td>Stainless Steel</td><td>0</td><td>5,600</td><td>3</td><td>Watches</td><td>0</td><td>A1009</td></tr>
+</table>
+
+<!-- Remainder of original content -->
+<nav>
     <ul>
-        <li>Rings</li>
-        <li>Necklaces</li>
-        <li>Bracelets</li>
-        <li>Earrings</li>
-        <li>Anklets</li>
+        <li>Home</li>
+        <li>Collections</li>
+        <li>Our Story</li>
+        <li>Contact</li>
     </ul>
+</nav>
+<p>Discover our exclusive collection of hand-crafted gold and diamond pieces.</p>
+<p>Shop Now</p>
 
-    <h3>Ordered Jewelry List</h3>
-    <ol>
-        <li>Gold Ring</li>
-        <li>Diamond Necklace</li>
-        <li>Silver Bracelet</li>
-        <li>Pearl Earrings</li>
-        <li>Platinum Chain</li>
-    </ol>
-
-    <!-- Line 15: Nested list with 6 items -->
-    <h3>Jewelry Categories</h3>
-    <ul>
-        <li>Rings
-            <ul>
-                <li>Engagement Rings</li>
-                <li>Wedding Bands</li>
-            </ul>
-        </li>
-        <li>Necklaces
-            <ul>
-                <li>Gold Chains</li>
-                <li>Diamond Pendants</li>
-            </ul>
-        </li>
-    </ul>
-
-    <!-- Line 17: Table (10 columns, 5 rows) -->
-    <h3>Jewelry Inventory</h3>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Type</th>
-            <th>Material</th>
-            <th>Weight</th>
-            <th>Price</th>
-            <th>Stock</th>
-            <th>Origin</th>
-            <th>Quality</th>
-            <th>Year</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Royal Ring</td>
-            <td>Ring</td>
-            <td>Gold</td>
-            <td>5g</td>
-            <td>$500</td>
-            <td>10</td>
-            <td>Italy</td>
-            <td>High</td>
-            <td>2026</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Diamond Glow</td>
-            <td>Necklace</td>
-            <td>Diamond</td>
-            <td>8g</td>
-            <td>$1200</td>
-            <td>5</td>
-            <td>France</td>
-            <td>Premium</td>
-            <td>2026</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Silver Touch</td>
-            <td>Bracelet</td>
-            <td>Silver</td>
-            <td>6g</td>
-            <td>$300</td>
-            <td>15</td>
-            <td>India</td>
-            <td>Medium</td>
-            <td>2025</td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>Pearl Drop</td>
-            <td>Earrings</td>
-            <td>Pearl</td>
-            <td>4g</td>
-            <td>$400</td>
-            <td>8</td>
-            <td>Japan</td>
-            <td>High</td>
-            <td>2025</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>Platinum Lux</td>
-            <td>Chain</td>
-            <td>Platinum</td>
-            <td>7g</td>
-            <td>$1500</td>
-            <td>3</td>
-            <td>USA</td>
-            <td>Premium</td>
-            <td>2026</td>
-        </tr>
-    </table>
+<!-- 10. Footer -->
+<footer>
+    © 2026 Elegance Jewelers | Handcrafted Beauty | info@elegancejewelers.com
+</footer>
 
 </body>
 </html>
+
